[project]
name = "agentic-ai-30-days"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
    "pip>=25.3",
    "langchain-openai>=1.1.6",
]
