[project]
name = "agentic-ai-30-days"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "langchain>=1.0.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=1.0.2",
    "langchain-tavily>=0.2.13",
    "pip>=25.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.14.0",
]
